# tal_assistant_adk

./: .gitignore  .pyre_configuration  KAREEM_TASK.md  README.md  main.py  pyproject.toml  requirements.txt  test_servers.py
examples/: README.md  debug_publish.py  diagnose_ats_connection.py  example_integration_main.py  example_nqi_init.py  example_nqi_predefined.py  example_personalized_interview_retrieval.py  example_question_bank.py  example_question_bank_personalizer.py  example_redis_interview_context.py  example_session_init.py
gosub/: go.mod  main.go
next_question_agent/: .env  README.md  agent_executor_next_question.py  agent_next_question.py
pkg/ats_api/: README.md  __init__.py  client.py  models.py  session_initializer.py
pkg/redis/: __init__.py  redis_publisher.py
question_bank_personalizer/: README.md  __init__.py  agent.py  agent_executor.py  agent_executor_grpc.py
signaling_agent/: .env  agent.py  agent_executor.py
tests/: README.md  test_data_conversation_flow.json  test_data_shallow_answers.json  test_data_thorough_answers.json  test_qbp_grpc.py  test_request.json  test_servers.py
tmp/: agent.py  agent_executor.py  agent_executor_next_question.py  agent_next_question.py  main.py  main_next_question.py  redis_session_service.py  test_ws.py
